--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,48 +1,21 @@
-name: kurashikku
-description: "家計簿アプリ〜暮らしっく"
-publish_to: 'none'
-
-version: 1.0.0+1
-
-environment:
-  sdk: '>=3.1.0 <4.0.0'
-
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.2
+  flutter_riverpod: ^2.4.9
+  hive_flutter: ^1.1.0
+  intl: ^0.19.0
+  # file_picker を最新バージョンに更新
+  file_picker: ^8.0.0+1  # 最新バージョンに更新
+  share_plus: ^7.2.2
+  path_provider: ^2.1.2
   flutter_localizations:
     sdk: flutter
-
-  # 状態管理
-  flutter_riverpod: ^2.4.9
-
-  # データベース
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
-
-  # UI・デザイン
-  cupertino_icons: ^1.0.2
-#  intl: 0.20.2
-  
-  # ファイル操作
-  path_provider: ^2.1.1
-  share_plus: ^7.2.1
-  file_picker: ^6.1.1
-  
-  # チャート表示
-  fl_chart: ^1.0.0
+  fl_chart: ^0.66.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  
-  # Hive コード生成
   hive_generator: ^2.0.1
   build_runner: ^2.4.7
-
-flutter:
-  uses-material-design: true
-  
-  # 多言語対応（日本語）
-  generate: true
