--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,22 @@
+name: household_manager
+description: 家計簿アプリ「暮らしっく」
+
+publish_to: 'none'
+
+version: 1.0.0+1
+
+environment:
+  sdk: '^3.8.0'
+  flutter: ">=3.24.0"
+
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.4.9
   hive_flutter: ^1.1.0
-  intl: ^0.19.0
-  # file_picker を最新バージョンに更新
-  file_picker: ^8.0.0+1  # 最新バージョンに更新
+  intl: ^0.20.2
+  file_picker: ^8.0.0+1
   share_plus: ^7.2.2
   path_provider: ^2.1.2
   flutter_localizations:
@@ -19,3 +29,15 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   hive_generator: ^2.0.1
   build_runner: ^2.4.7
+  flutter_launcher_icons: ^0.13.1
+
+flutter:
+  uses-material-design: true
+  assets:
+    - assets/
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
+  adaptive_icon_background: "#FFFFFF"  # 背景色（お好みで）
