--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,13 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+﻿org.gradle.jvmargs=-Xmx1536M -XX:MaxMetaspaceSize=512m
+org.gradle.daemon=false
+org.gradle.parallel=false
 android.useAndroidX=true
-android.enableJetifier=true
-org.gradle.jvmargs=-Xmx2048m -XX:-UseParallelGC
+android.enableJetifier=false
+# gradle.propertiesを更新（R8無効化）
+@"
+org.gradle.jvmargs=-Xmx2048M -XX:MaxMetaspaceSize=512m
+org.gradle.daemon=false
+org.gradle.parallel=false
+android.useAndroidX=true
+android.enableJetifier=false
+"@ | Out-File -FilePath "android\gradle.properties" -Encoding utf8
